<resources>
    <string name="app_name">DeliveryTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="invalid_login">Wrong username or password</string>
    <string name="deliver_by">Deliver by</string>
    <string name="status">Status: </string>
    <string name="need_account">Need an account?</string>
    <string name="register_login">Register</string>
    <string name="login_to_register"><u>Register</u></string>
    <string name="register_user_existed">Already register username. Choose another one</string>
    <string name="register_already_have_account">Already have an account?</string>
    <string name="register_to_login"><u>Login</u></string>
    <string name="action_register">Register</string>
    <string name="delivery_details_title">Delivery details</string>
    <string name="publish_date">Published date</string>
    <string name="address">Address</string>
    <string name="delivery_note">Note</string>
    <string name="delivery_status">Status</string>
    <string name="home_title">Delivery requests</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_accept_delivery">Accept this delivery request?</string>
    <string name="current_delivery">Current delivery</string>
    <string name="distance_to_dest">Distance to destination</string>
    <string name="duration">Duration</string>
    <string name="finish">Finish</string>
    <string name="delivery_finished">You have finished this delivery.\nWell done!</string>
    <string name="step_count_fact">Fun fact:\nYou walked %1$d steps during this delivery!</string>
    <string name="done">Done</string>
</resources>
